--- a/html/_/support.html
+++ b/html/_/support.html
@@ -198,9 +198,10 @@ crossorigin=""/>
           <span lang="en"><b class="bplus"><i>Professionals who participated to the ScenTree database :</i></b> </span>
         </p>
         <p>
+          <!--POUR TOUT LES NOUVEAUX ->  class="nouveausupporter"  -->
           <ul style="font-size: 0.8em;">
             <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
-            <li class="nouveausupporter">BELLOT Raphaël -<span lang="fr" class="profession"> (Apprenti Chimie Analytique Fine Fragrance)</span><span lang="en" class="profession"> (Apprentice in Fine Fragrance Analytical Chemistry)</span></li>
+            <li>BELLOT Raphaël -<span lang="fr" class="profession"> (Apprenti Chimie Analytique Fine Fragrance)</span><span lang="en" class="profession"> (Apprentice in Fine Fragrance Analytical Chemistry)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
             <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
@@ -210,7 +211,8 @@ crossorigin=""/>
             <li>FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
             <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
             <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
-            <li class="nouveausupporter">LAMBERT Hanna -<span lang="fr" class="profession"> ( )</span><span lang="en" class="profession"> ( )</span></li>
+            <li class="nouveausupporter">HAGUIER Mathilde -<span lang="fr" class="profession"> (Parfumeur Junior chez IPRA Fragrances)</span><span lang="en" class="profession"> (Junior perfumer at IPRA Fragrances)</span></li>
+            <li>LAMBERT Hanna -<span lang="fr" class="profession"> (Apprentie Parfumeur Analyste chez Only Fragrance)</span><span lang="en" class="profession"> (Analyst Perfumer Apprentice at Only Fragrance)</span></li>
             <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
             <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
             <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
@@ -221,6 +223,7 @@ crossorigin=""/>
             <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
             <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
             <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
+            <li class="nouveausupporter">TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
           </ul>
         </p>
