--- a/html/_/index.html
+++ b/html/_/index.html
@@ -484,7 +484,7 @@ crossorigin=""/>
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
                     <div class="blockifra1 mt-3">
                       <!--Type de restriction-->
-                      <h2 class="amendment d-inline text-size-14px">
+                      <h2 class="restriction d-inline text-size-14px">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
@@ -660,7 +660,7 @@ crossorigin=""/>
 
                     <div class="blockcategories49">
                       <!--Type de restriction-->
-                      <h2 class="amendment49 d-inline text-size-14px">
+                      <h2 class="restriction49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
@@ -1049,7 +1049,7 @@ crossorigin=""/>
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
                     <div class="blockifra1 mt-3">
                       <!--Type de restriction-->
-                      <h2 class="amendment d-inline text-size-14px">
+                      <h2 class="restriction d-inline text-size-14px">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
@@ -1220,7 +1220,7 @@ crossorigin=""/>
 
                     <div class="blockcategories49">
                       <!--Type de restriction-->
-                      <h2 class="amendment49 d-inline text-size-14px">
+                      <h2 class="restriction49 d-inline text-size-14px">
                         <span>
                           <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
