--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1535,9 +1535,9 @@ crossorigin=""/>
         </div> 
       </div>
     </div>
-    
-  </div> <!--fin modal-body-->
 
+  </div> <!--fin modal-body-->
+  </div>
   <div class="modal-footer">
       <div class="container-fluid">
         <div class="col-12 text-center">
