--- a/html/_/index.html
+++ b/html/_/index.html
@@ -450,14 +450,14 @@ crossorigin=""/>
             <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="container">
-                  <ul class="nav nav-pills nav-justified" role="tablist" style="text-align: center;">
-                    <li class="nav-item col-6">
+                  <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="text-align: center;">
+                    <li class="nav-item offset-2 col-3">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                         <span lang="fr">49<sup>ème</sup> amendement</span>
                         <span lang="en">49<sup>th</sup> amendement</span>
                       </a>
                     </li>
-                    <li class="nav-item col-6">
+                    <li class="nav-item offset-2 col-3">
                       <a class="nav-link" id="pills-tab48" href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true"  >
                         <span lang="fr">48<sup>ème</sup> amendement</span>
                         <span lang="en">48<sup>th</sup> amendement</span>
