--- a/html/_/index.html
+++ b/html/_/index.html
@@ -450,7 +450,7 @@ crossorigin=""/>
             <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="container">
-                  <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="display: inline;">
+                  <ul class="navbar-nav nav nav-tabs" role="tablist" style="text-align: center;">
                     <li class="nav-item col-6">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                         <span lang="fr">49<sup>ème</sup> amendement</span>
