--- a/html/_/index.html
+++ b/html/_/index.html
@@ -450,7 +450,8 @@ crossorigin=""/>
             <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="container">
-                  <ul class="navbar-nav nav nav-tabs" role="tablist" style="text-align: center;">
+              <h4 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
+                  <ul class="navbar-nav nav nav-tabs" role="tablist" style="align-items: center;">
                     <li class="nav-item col-6">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                         <span lang="fr">49<sup>ème</sup> amendement</span>
@@ -463,7 +464,8 @@ crossorigin=""/>
                         <span lang="en">48<sup>th</sup> amendement</span>
                       </a>
                     </li>
-                  </ul>  
+                  </ul>
+              </h4>  
             </div>
           <div class="tab-content">
             <!--Ouverture du 48th amendement-->
