--- a/html/_/index.html
+++ b/html/_/index.html
@@ -449,7 +449,9 @@ crossorigin=""/>
             </h2><span class="IFRA-show-nothing textitem"><span lang="fr">Ingrédient non réglementé</span><span lang="en">This ingredient is not restricted</span></span>
             <br>
             <!--Onglets pour les amendements IFRA-->
-            <div class="container">
+            <div class="panel-heading m-0 p-0">
+              <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
                   <ul class="navbar-nav nav nav-tabs" role="tablist" style="align-items: center;">
                     <li class="nav-item col-5">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
@@ -463,8 +465,10 @@ crossorigin=""/>
                         <span lang="en">48<sup>th</sup> amendement</span>
                       </a>
                     </li>
-                  </ul>  
-            </div>
+                  </ul>
+                </h4>
+              </nav>
+            </div>  
           <div class="tab-content">
             <!--Ouverture du 48th amendement-->
             <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48">    
