--- a/html/_/index.html
+++ b/html/_/index.html
@@ -449,10 +449,10 @@ crossorigin=""/>
             </h2><span class="IFRA-show-nothing textitem"><span lang="fr">Ingrédient non réglementé</span><span lang="en">This ingredient is not restricted</span></span>
             <br>
             <!--Onglets pour les amendements IFRA-->
-            <div class="panel-heading m-0 p-0">
+            <div class="panel-heading m-0 p-0" style="background-color: blue;">
               <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
-                  <ul class="navbar-nav nav nav-tabs" role="tablist" style="align-items: center;">
+                  <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                     <li class="nav-item col-5">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                         <span lang="fr">49<sup>ème</sup> amendement</span>
