--- a/html/_/index.html
+++ b/html/_/index.html
@@ -449,7 +449,7 @@ crossorigin=""/>
             </h2><span class="IFRA-show-nothing textitem"><span lang="fr">Ingrédient non réglementé</span><span lang="en">This ingredient is not restricted</span></span>
             <br>
             <!--Onglets pour les amendements IFRA-->
-            <div class="panel-heading m-0 p-0" style="background-color: blue;">
+            <div class="panel-heading m-0 p-0">
               <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
                   <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
@@ -472,7 +472,7 @@ crossorigin=""/>
           <div class="tab-content">
             <!--Ouverture du 48th amendement-->
             <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48">    
-              <div class="container-fluid mt-2">
+              <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
 
