--- a/html/_/index.html
+++ b/html/_/index.html
@@ -649,7 +649,7 @@ crossorigin=""/>
                 <div class="row">
                   <div class="col-12">
 
-                    <div class="blockcategories49">
+                    <div class="blockcategories49 mt-3">
                       <!--Type de restriction-->
                       <h3 class="restriction49 d-inline text-size-14px">
                         <span>
@@ -762,7 +762,7 @@ crossorigin=""/>
                         </table>
                       </div>
                     </div> <!--Ici on ferme blockcategories49-->
-                    
+
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
                     <div class="blockannexeI49 mt-3 listy-49th-IFRA-table-without-botanicals">
 
@@ -794,7 +794,6 @@ crossorigin=""/>
                               </tbody>
                         </table>
                       </p>
-
                     </div><!--Fermeture blockannexeI49-->
 
                       <div class="responsabilité"><!--paragraphe de responsabilité -->
