--- a/html/_/index.html
+++ b/html/_/index.html
@@ -606,20 +606,24 @@ crossorigin=""/>
                       </h2>
                       <br>
                         <table class="tableannexeI">
-                          <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
                                 <tr>
                                   <th colspan="3">
-                                    <span lang="fr">Liste des ingrédients contenants </span>
-                                    <span lang="en">Ingredients containing </span>
+                                    <span lang="fr">Liste des composés réglementés contenus dans cet ingrédient</span>
+                                    <span lang="en">List of regulated compounds contained in this ingredient</span>
                                   </th>
                                 </tr>
                               </thead>
                                 <tr style="background-color: #FBE5D6FF; font-weight: bold;">
-                                  <td>Ingredient Name</td>
+                                  <td>
+                                    <span lang="fr">Nom de l'ingrédient réglementé</span>
+                                    <span lang="en">Regulated ingredient name</span>
+                                  </td>
                                   <td>CAS N°</td>
-                                  <td>Estimated Concentration</td>
+                                  <td>
+                                    <span lang="fr">Concentration estimée</span>
+                                    <span lang="en">Estimated Concentration</td>
                                 </tr>
                               <tbody class="ingredients-containing-without-botanicals-48">
                               </tbody>
@@ -786,12 +790,12 @@ crossorigin=""/>
                               </thead>
                                 <tr style="background-color: #FBE5D6FF; font-weight: bold;">
                                   <td>
-                                    <span lang="fr">Nom de l'ingrédient réglementés</span>
-                                    <span lang="en">Regulated ingredients name</span>
+                                    <span lang="fr">Nom de l'ingrédient réglementé</span>
+                                    <span lang="en">Regulated ingredient name</span>
                                   </td>
                                   <td>CAS N°</td>
                                   <td>
-                                    <span lang="fr">Concentration estimée (source:IFRA)</span>
+                                    <span lang="fr">Concentration estimée</span>
                                     <span lang="en">Estimated Concentration</td>
                                 </tr>
                               <tbody class="ingredients-containing-without-botanicals-49">
