--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1156,22 +1156,26 @@ crossorigin=""/>
                 </h2>
                 <br>
                 <!--Onglets pour les amendements IFRA-->
-                <div class="container">
-                      <ul class="nav nav-pills nav-justified" role="tablist" style="text-align: center;">
+                <div class="panel-heading m-0 p-0">
+                  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                    <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
+                      <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                         <li class="nav-item col-6">
-                          <a class="nav-link active" id="pills-tab49s" href="#tab49sinfo" data-toggle="pill" aria-controls="tab49sinfo" aria-selected="false"  >
+                          <a class="nav-link active" id="pills-tab49" href="#tab49sinfo" data-toggle="pill" aria-controls="tab49sinfo" aria-selected="false"  >
                             <span lang="fr">49<sup>ème</sup> amendement</span>
                             <span lang="en">49<sup>th</sup> amendement</span>
                           </a>
                         </li>
                         <li class="nav-item col-6">
-                          <a class="nav-link" id="pills-tab48s" href="#tab48sinfo" data-toggle="pill" aria-controls="tab48sinfo" aria-selected="true"  >
+                          <a class="nav-link" id="pills-tab48" href="#tab48sinfo" data-toggle="pill" aria-controls="tab48sinfo" aria-selected="true"  >
                             <span lang="fr">48<sup>ème</sup> amendement</span>
                             <span lang="en">48<sup>th</sup> amendement</span>
                           </a>
                         </li>
-                      </ul>  
-                </div>
+                      </ul>
+                    </h4>
+                  </nav>
+                </div>  
 
               <div class="tab-content">
                 <!--Ouverture du 48th amendement-->
