--- a/html/_/index.html
+++ b/html/_/index.html
@@ -804,7 +804,7 @@ crossorigin=""/>
                       </p>
                     </div><!--Fermeture blockannexeI49-->
 
-                      <div class="responsabilité"><!--paragraphe de responsabilité -->
+                    <div class="responsabilité"><!--paragraphe de responsabilité -->
                         <p class="logoifra text-size-11px text-center text-my-grey">
                           <span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span>
                           <span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span>
@@ -818,7 +818,7 @@ crossorigin=""/>
                           <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
                           <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span>
                         </p>
-                      </div><!--Ici on faire le paragraphe de responsabilité-->
+                    </div><!--Ici on faire le paragraphe de responsabilité-->
 
                   </div><!--Ici on ferme col-12-->
                 </div><!--Ici on ferme row-->
@@ -1161,13 +1161,13 @@ crossorigin=""/>
                     <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
                       <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                         <li class="nav-item col-6">
-                          <a class="nav-link active" id="pills-tab49" href="#tab49sinfo" data-toggle="pill" aria-controls="tab49sinfo" aria-selected="false"  >
+                          <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                             <span lang="fr">49<sup>ème</sup> amendement</span>
                             <span lang="en">49<sup>th</sup> amendement</span>
                           </a>
                         </li>
                         <li class="nav-item col-6">
-                          <a class="nav-link" id="pills-tab48" href="#tab48sinfo" data-toggle="pill" aria-controls="tab48sinfo" aria-selected="true"  >
+                          <a class="nav-link" id="pills-tab48" href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true"  >
                             <span lang="fr">48<sup>ème</sup> amendement</span>
                             <span lang="en">48<sup>th</sup> amendement</span>
                           </a>
@@ -1325,8 +1325,8 @@ crossorigin=""/>
                                     </tbody>
                             </table>
                           </div>
-
                         </div>
+
                         <div class="responsabilité">
                             <!--paragraphe de responsabilité -->
                             <p class="logoifra text-size-11px text-center text-my-grey">
@@ -1385,7 +1385,7 @@ crossorigin=""/>
                           </p>
                         </div><!--Fermeture blockannexeI49-->
 
-                        <div class="blockcategories49">
+                        <div class="blockcategories49 mt-3">
                           <!--Type de restriction-->
                           <h3 class="restriction49 d-inline text-size-14px">
                               <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
@@ -1490,15 +1490,14 @@ crossorigin=""/>
                           </div>
                         </div> <!--Ici on ferme blockcategories49-->
                         
-
-                          <div class="responsabilité"><!--paragraphe de responsabilité -->
+                        <div class="responsabilité"><!--paragraphe de responsabilité -->
                             <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
                             <!--Lien vers le site de l'IFRA-->
                             <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
                             <br>
                             <!--Lien interne sur l'IFRA-->
                             <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span><span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span></p>
-                          </div><!--Ici on faire le paragraphe de responsabilité-->
+                        </div><!--Ici on faire le paragraphe de responsabilité-->
 
                       </div><!--Ici on ferme col-12-->
                     </div><!--Ici on ferme row-->
