--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1161,13 +1161,13 @@ crossorigin=""/>
                     <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
                       <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                         <li class="nav-item col-6">
-                          <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
+                          <a class="nav-link active" id="pills-tab49s" href="#tab49sinfo" data-toggle="pill" aria-controls="tab49sinfo" aria-selected="false"  >
                             <span lang="fr">49<sup>ème</sup> amendement</span>
                             <span lang="en">49<sup>th</sup> amendement</span>
                           </a>
                         </li>
                         <li class="nav-item col-6">
-                          <a class="nav-link" id="pills-tab48" href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true"  >
+                          <a class="nav-link" id="pills-tab48s" href="#tab48sinfo" data-toggle="pill" aria-controls="tab48sinfo" aria-selected="true"  >
                             <span lang="fr">48<sup>ème</sup> amendement</span>
                             <span lang="en">48<sup>th</sup> amendement</span>
                           </a>
