--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1305,21 +1305,28 @@ crossorigin=""/>
                             </h2>
                             <br>
                             <table class="tableannexeI">
-                                <caption class="caption mb-0"><span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                                 <!-- EN-TETE DU TABLEAU-->
                                     <thead>
                                       <tr>
                                         <th colspan="4">
-                                          <span lang="fr">Liste des ingrédients contenants </span>
-                                          <span lang="en">Ingredients containing </span>
+                                          <span lang="fr">Liste des ingrédients naturels contenants la matière présentée ici</span>
+                                          <span lang="en">List of natural ingredients containing the material presented here</span>
                                         </th>
                                       </tr>
                                     </thead>
                                       <tr style="background-color: #FBE5D6FF; font-weight: bold;">
-                                        <td>Ingredient Name</td>
-                                        <td>Botanical Name</td>
+                                        <td>
+                                          <span lang="fr">Nom de l'ingrédient</span>
+                                          <span lang="en">Ingredient Name</span>
+                                        </td>
+                                        <td>
+                                          <span lang="fr">Nom Botanique</span>
+                                          <span lang="en">Botanical Name</span></td>
                                         <td>CAS N°</td>
-                                        <td>Estimated Concentration</td>
+                                        <td>
+                                          <span lang="fr">Concentration estimée</span>
+                                          <span lang="en">Estimated Concentration</span>
+                                        </td>
                                       </tr>
                                     <tbody class="ingredients-containing-with-botanicals-48">
                                     </tbody>
@@ -1471,19 +1478,27 @@ crossorigin=""/>
                               <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                               <!-- EN-TETE DU TABLEAU-->
                                   <thead>
-                                    <tr>
-                                      <th colspan="4">
-                                        <span lang="fr">Liste des ingrédients contenants </span>
-                                        <span lang="en">Ingredients containing </span>
-                                      </th>
-                                    </tr>
-                                  </thead>
-                                    <tr style="background-color: #FBE5D6FF; font-weight: bold;">
-                                      <td>Ingredient Name</td>
-                                      <td>Botanical Name</td>
-                                      <td>CAS N°</td>
-                                      <td>Estimated Concentration</td>
-                                    </tr>
+                                      <tr>
+                                        <th colspan="4">
+                                          <span lang="fr">Liste des ingrédients naturels contenants la matière présentée ici</span>
+                                          <span lang="en">List of natural ingredients containing the material presented here</span>
+                                        </th>
+                                      </tr>
+                                    </thead>
+                                      <tr style="background-color: #FBE5D6FF; font-weight: bold;">
+                                        <td>
+                                          <span lang="fr">Nom de l'ingrédient</span>
+                                          <span lang="en">Ingredient Name</span>
+                                        </td>
+                                        <td>
+                                          <span lang="fr">Nom Botanique</span>
+                                          <span lang="en">Botanical Name</span></td>
+                                        <td>CAS N°</td>
+                                        <td>
+                                          <span lang="fr">Concentration estimée</span>
+                                          <span lang="en">Estimated Concentration</span>
+                                        </td>
+                                      </tr>
                                   <tbody class="ingredients-containing-with-botanicals-49">
                                   </tbody>
                             </table>
