--- a/html/_/index.html
+++ b/html/_/index.html
@@ -708,7 +708,7 @@ crossorigin=""/>
                                   <td><span class="modalbody-49-cat5B"></span></td>
                                   <td><span class="modalbody-49-cat5C"></span></td>
                                   <td><span class="modalbody-49-cat5D"></span></td>
-				                          <td><span class="modalbody-49-cat6"></span></td>
+                                  <td><span class="modalbody-49-cat6"></span></td>
                                 </tr>
                                 <tr class="mt-2">
                                   <th>Cat.7A</th>
@@ -835,7 +835,7 @@ crossorigin=""/>
             </span>  
           </h1>
           <span id="TO DEFINE" class="textitem"></span>
-	       </div>-->      
+         </div>-->      
 
 </div>   
 </div>
@@ -1140,7 +1140,7 @@ crossorigin=""/>
                   <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
                     
               </h3>
-              <span class="modalbody-allergenes1 textitem"></span> 
+              <span class="modalbody-allergenes textitem"></span> 
             </div>
             <!--Fin du block allergènes-->
             <br>
@@ -1380,7 +1380,7 @@ crossorigin=""/>
                                       </th>
                                     </tr>
                                   </thead>
-                                   	<tr style="background-color: #FBE5D6FF; font-weight: bold;">
+                                    <tr style="background-color: #FBE5D6FF; font-weight: bold;">
                                       <td>Ingredient Name</td>
                                       <td>CAS N°</td>
                                       <td>Estimated Concentration</td>
@@ -1439,7 +1439,7 @@ crossorigin=""/>
                                       <td><span class="modalbody-49-cat5B"></span></td>
                                       <td><span class="modalbody-49-cat5C"></span></td>
                                       <td><span class="modalbody-49-cat5D"></span></td>
-    				                          <td><span class="modalbody-49-cat6"></span></td>
+                                      <td><span class="modalbody-49-cat6"></span></td>
                                     </tr>
                                     <tr class="mt-2">
                                       <th>Cat.7A</th>
@@ -1520,7 +1520,7 @@ crossorigin=""/>
             </div><!--Fermeture du tab-content-->
           </div><!--Fermeture du block IFRA-->
             <!--Block Pictogrammes-->
-          	<!--<div class="blockpicto">
+            <!--<div class="blockpicto">
                     <h1 class="item d-inline text-size-16px">
                       <span>
                         <b lang="fr">Pictogrammes <sup class="fas fa-question-circle iconetab" title="A FAIRE ABSOLUMENT"></sup> :</b>
@@ -1528,7 +1528,7 @@ crossorigin=""/>
                       </span>  
                     </h1>
                     <span id="TO DEFINE" class="textitem"></span>
-          	</div>-->       
+            </div>-->       
         </div><!--Là on ferme col-12-->   
         </div><!--Ici on ferme row-->
       </div><!--Ici on ferme container fluid-->
