--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1140,7 +1140,7 @@ crossorigin=""/>
                   <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
                     
               </h3>
-              <span class="modalbody-allergenes textitem"></span> 
+              <span class="modalbody-allergenes1 textitem"></span> 
             </div>
             <!--Fin du block allergènes-->
             <br>
