synthetics IFRA tables and infos HTML classes

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1184,7 +1184,7 @@ crossorigin=""/>
                     <div class="row">
                       <div class="col-12">
 
-                        <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals">
+                        <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
                           <p><!--Block annexe 1 des naturels-->
                             <h2 class="annexeI49B d-inline text-size-14px">
                               <span>
@@ -1218,21 +1218,21 @@ crossorigin=""/>
                         <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
                         <div class="blockifra1 mt-3">
                           <!--Type de restriction-->
-                          <h3 class="restriction d-inline text-size-14px">
+                          <h3 class="restriction d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                               <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                               <span class="modalbody-ifra-48 textitem"></span>
                           </h3>
                           <br>
                           <!--Amendement d'apparition de l'ingrédients concerné-->
-                          <h3 class="amendment d-inline text-size-14px">
+                          <h3 class="amendment d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                               <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                               <span class="modalbody-amendment-48 textitem"></span>
                           </h3>
                           <br>
                           <!--Commentaires-->
-                          <h3 class="commentaires d-inline text-size-14px">
+                          <h3 class="commentaires d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
                               <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
                               <span class="modalbody-commentifra-48 textitem"></span>  
@@ -1242,7 +1242,7 @@ crossorigin=""/>
                           <div class="blocktable">
                             <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                             <div class="table-responsive text-center">
-                                  <table class="table1 main-48th-IFRA-table">
+                                  <table class="table1 main-48th-IFRA-table IFRA-table">
                                     <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                                     <!-- EN-TETE DU TABLEAU-->
                                     <tr>
@@ -1274,7 +1274,7 @@ crossorigin=""/>
                                     </tr>
                                   </table>
                                 
-                                  <table class="table2 skin-IFRA-table">
+                                  <table class="table2 skin-IFRA-table IFRA-table">
                                     <!-- TITRE DU TABLEAU-->
                                     <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                                     <!-- EN-TETE DU TABLEAU-->
@@ -1296,7 +1296,7 @@ crossorigin=""/>
                             </div>
                           </div>
 
-                          <div class="listy-48th-IFRA-table-with-botanicals">
+                          <div class="listy-48th-IFRA-table-with-botanicals IFRA-table">
                             <h2 class="annexeI49 d-inline text-size-14px">
                                 <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                                 <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
@@ -1360,7 +1360,7 @@ crossorigin=""/>
                     <div class="row">
                       <div class="col-12">
                         <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires-->
-                        <div class="blockannexeI49 mt-3 listy-49th-IFRA-table-without-botanicals">
+                        <div class="blockannexeI49 mt-3 listy-49th-IFRA-table-without-botanicals IFRA-table">
 
                           <p>
                             <h2 class="annexeI49B d-inline text-size-14px">
@@ -1392,21 +1392,21 @@ crossorigin=""/>
 
                         <div class="blockcategories49 mt-3">
                           <!--Type de restriction-->
-                          <h3 class="restriction49 d-inline text-size-14px">
+                          <h3 class="restriction49 d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                               <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                               <span class="modalbody-ifra-49 textitem"></span>
                           </h3>
                           <br>
                           <!--Amendement d'apparition de l'ingrédients concerné-->
-                          <h3 class="amendment49 d-inline text-size-14px">
+                          <h3 class="amendment49 d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                               <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                               <span class="modalbody-amendment-49 textitem"></span>
                           </h3>
                           <br>
                           <!--Commentaires-->
-                          <h3 class="commentaires49 d-inline text-size-14px">
+                          <h3 class="commentaires49 d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
                               <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
                               <span class="modalbody-commentifra-49 textitem"></span>  
@@ -1414,7 +1414,7 @@ crossorigin=""/>
                           
                           <div class="blocktable49">
                             <div class="table-responsive text-center mb-2">
-                                  <table class="table149 main-49th-IFRA-table">
+                                  <table class="table149 main-49th-IFRA-table IFRA-table">
                                     <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                                     <!-- EN-TETE DU TABLEAU-->
                                     <tr>
@@ -1466,7 +1466,7 @@ crossorigin=""/>
                             </div>
                           </div>
 
-                          <div class="listy-49th-IFRA-table-with-botanicals">
+                          <div class="listy-49th-IFRA-table-with-botanicals IFRA-table">
                             <h3 class="annexeI49 d-inline text-size-14px">
                                 <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
                                 <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
