--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Les ingrédients parfumées</title>
-<title lang="en">ScenTree - Perfume ingredients</title>
+<title lang="fr">ScenTree - Liste des ingrédients de ScenTree</title>
+<title lang="en">ScenTree - Ingredients List</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
