--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -33,7 +33,7 @@ crossorigin=""/>
 <header class="d-md-none">
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
-  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="scentree.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
+  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
 <div class="dropdown">
   <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
@@ -198,7 +198,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Estragole__Estragole.html"><span lang="en">Estragole (CAS N°: 140-67-0)</span><span lang="fr">Estragole (CAS N°: 140-67-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Furfural__Furfural.html"><span lang="en">Furfural (CAS N°: 98-01-1)</span><span lang="fr">Furfural (CAS N°: 98-01-1)</span></a>
               <br><a class="interpop"  href="../ingredients/4-Vinyl_Guaiacol__4-Vinyl_Guaiacol.html"><span lang="en">4-Vinyl Guaiacol (CAS N°: 7786-61-0)</span><span lang="fr">4-Vinyl Guaiacol (CAS N°: 7786-61-0)</span></a>
-              <br><a class="interpop"  href="../ingredients/2-méthoxy-3-isopropyl_Pyrazine__2-méthoxy-3-isopropyl_Pyrazine.html"><span lang="en">2-méthoxy-3-isopropyl Pyrazine (CAS N°: 25773-40-4)</span><span lang="fr">2-méthoxy-3-isopropyl Pyrazine (CAS N°: 25773-40-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/2-methoxy-3-isopropyl_Pyrazine__2-méthoxy-3-isopropyl_Pyrazine.html"><span lang="en">2-méthoxy-3-isopropyl Pyrazine (CAS N°: 25773-40-4)</span><span lang="fr">2-méthoxy-3-isopropyl Pyrazine (CAS N°: 25773-40-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Dynamone®__Dynamone®.html"><span lang="en">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span><span lang="fr">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span></a>
           </p>
           <p>
