--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1333,11 +1333,11 @@ crossorigin=""/>
                         </div>
 
                         <div class="responsabilité">
-                            <!--paragraphe de responsabilité -->
+                            <!--paragraphe de responsabilité 
                             <p class="logoifra text-size-11px text-center text-my-grey">
                               <span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span>
                               <span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span>
-                            </p>
+                            </p>-->
                             <!--Lien vers le site de l'IFRA-->
                             <p class="logoifra text-size-11px" style="margin-bottom: 0;">
                               <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
@@ -1503,8 +1503,9 @@ crossorigin=""/>
                           </div>
                         </div> <!--Ici on ferme blockcategories49-->
                         
-                        <div class="responsabilité"><!--paragraphe de responsabilité -->
-                            <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>
+                        <div class="responsabilité">
+                          <!--paragraphe de responsabilité 
+                            <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p>-->
                             <!--Lien vers le site de l'IFRA-->
                             <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
                             <br>
