--- a/html/_/contacts.html
+++ b/html/_/contacts.html
@@ -47,7 +47,7 @@ crossorigin=""/>
   <p lang="fr">Si vous souhaitez nous faire part d'une remarque ou d'une interrogation, merci de rentrer en contact avec l'une des adresses mails suivantes : </p>
   <p lang="en">If you would like to share a remark or a request, please contact one of these two email addresses : </p>
   <p><ul class="fa-ul">
-    <li><span class="fa-li" ><i class="far fa-envelope"></i></span>Maxime BAUD : <a href="mailto:maxime@scentree.co"> maxime@scentree.co </a></li>
+    <li><span class="fa-li" ><i class="far fa-envelope"></i></span><h2>Maxime BAUD : </h2><a href="mailto:maxime@scentree.co"> maxime@scentree.co </a></li>
     <li><span class="fa-li"><i class="far fa-envelope"></i></span>Thomas ESPINASSE : <a href="mailto:thomas@scentree.co"> thomas@scentree.co </a></li>
   </ul></p>
 </div>
